Major upgrade: Chess game, Library expansion, Keyblade branding, AI enhancement

--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@upstash/redis": "^1.25.1",
     "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
-    "chess.js": "^1.0.0-beta.6",
+    "chess.js": "^1.4.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "crypto-js": "^4.2.0",
@@ -49,7 +49,7 @@
     "next": "14.0.3",
     "next-themes": "^0.2.1",
     "react": "^18",
-    "react-chessboard": "^4.4.0",
+    "react-chessboard": "^4.7.3",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
