--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,16 +1,13 @@
 {
   "extends": [
     "next/core-web-vitals",
-    "@typescript-eslint/recommended",
     "prettier"
   ],
-  "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint"],
   "rules": {
-    "@typescript-eslint/no-unused-vars": "error",
-    "@typescript-eslint/no-explicit-any": "warn",
-    "prefer-const": "error",
-    "no-var": "error"
+    "prefer-const": "warn",
+    "no-var": "error",
+    "react/no-unescaped-entities": "off",
+    "react-hooks/exhaustive-deps": "warn"
   },
   "ignorePatterns": ["node_modules/", ".next/", "out/"]
 }
